--- a/sources/app/package.json
+++ b/sources/app/package.json
@@ -17,7 +17,9 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "7.*",
+        "tailwindcss": "^1.2.0",
         "vue": "^2.5.17",
+        "vue-router": "^3.1.5",
         "vue-template-compiler": "^2.6.11"
     }
 }
